contracts/subscription_vault/test_output_3.txt
   Compiling subscription_vault v0.1.0 (C:\Users\ADMIN\Desktop\mide-drips\stellabill-contracts\contracts\subscription_vault)
warning: unused import: `FromVal`
 --> contracts\subscription_vault\src\test.rs:8:43
  |
8 |     contract, contractimpl, Address, Env, FromVal, IntoVal, String, Symbol, Vec as SorobanVec,
  |                                           ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0369]: binary operation `==` cannot be applied to type `soroban_sdk::Val`
   --> contracts\subscription_vault\src\test.rs:843:5
    |
843 | /     assert_eq!(
844 | |         deposit_event.1.get(0).unwrap(),
845 | |         Symbol::new(&env, "deposited").into_val(&env)
846 | |     );
    | |     ^
    | |     |
    | |_____soroban_sdk::Val
    |       _
    |
note: `soroban_sdk::Val` does not implement `PartialEq<_>`
   --> C:\Users\ADMIN\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\soroban-env-common-22.1.3\src\val.rs:249:1
    |
249 | pub struct Val(u64);
    | ^^^^^^^^^^^^^^ `soroban_sdk::Val` is defined in another crate
    = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0369]: binary operation `==` cannot be applied to type `soroban_sdk::Val`
   --> contracts\subscription_vault\src\test.rs:847:5
    |
847 | /     assert_eq!(
848 | |         deposit_event.1.get(1).unwrap(),
849 | |         id.into_val(&env)
850 | |     );
    | |     ^
    | |     |
    | |_____soroban_sdk::Val
    |       _
    |
note: `soroban_sdk::Val` does not implement `PartialEq<_>`
   --> C:\Users\ADMIN\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\soroban-env-common-22.1.3\src\val.rs:249:1
    |
249 | pub struct Val(u64);
    | ^^^^^^^^^^^^^^ `soroban_sdk::Val` is defined in another crate
    = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused variable: `admin`
   --> contracts\subscription_vault\src\test.rs:557:26
    |
557 |     let (env, client, _, admin) = setup_test_env();
    |                          ^^^^^ help: if this is intentional, prefix it with an underscore: `_admin`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `token`
   --> contracts\subscription_vault\src\test.rs:898:23
    |
898 |     let (env, client, token, _) = setup_test_env();
    |                       ^^^^^ help: if this is intentional, prefix it with an underscore: `_token`

warning: unused variable: `env`
   --> contracts\subscription_vault\src\test.rs:925:10
    |
925 |     let (env, client, _, admin) = setup_test_env();
    |          ^^^ help: if this is intentional, prefix it with an underscore: `_env`

warning: unused variable: `admin`
   --> contracts\subscription_vault\src\test.rs:954:26
    |
954 |     let (env, client, _, admin) = setup_test_env();
    |                          ^^^^^ help: if this is intentional, prefix it with an underscore: `_admin`

warning: unused variable: `env`
    --> contracts\subscription_vault\src\test.rs:1834:10
     |
1834 |     let (env, client, _, admin) = setup_test_env();
     |          ^^^ help: if this is intentional, prefix it with an underscore: `_env`

For more information about this error, try `rustc --explain E0369`.
warning: `subscription_vault` (lib test) generated 6 warnings
error: could not compile `subscription_vault` (lib test) due to 2 previous errors; 6 warnings emitted
